frontend/providers/imagehub/deploy/manifests/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: imagehub
  name: imagehub-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagehub
  namespace: imagehub-frontend
spec:
  selector:
    matchLabels:
      app: imagehub-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: imagehub-frontend
    spec:
      serviceAccountName: imagehub-anonymous
      containers:
        - name: imagehub-frontend
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          # do not modify this image, it is used for CI/CD
          image: ghcr.io/labring/sealos-imagehub-frontend:dev
          imagePullPolicy: Always
          volumeMounts:
            - name: imagehub-frontend-volume
              mountPath: /config.yaml
              subPath: config.yaml
      volumes:
        - name: imagehub-frontend-volume
          configMap:
            name: imagehub-frontend-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: imagehub-frontend
  name: imagehub-frontend
  namespace: imagehub-frontend
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: imagehub-frontend
