frontend/providers/imagehub/deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: imagehub-frontend
  namespace: imagehub-frontend
spec:
  rules:
    - host: hub.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /()(.*)
            backend:
              service:
                name: imagehub-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - hub.sealos.io
      secretName: hub-sealos-io-cert
